--- a/108-wgs-snps.Rmd
+++ b/108-wgs-snps.Rmd
@@ -373,6 +373,40 @@ write.table(table, "outputs/108/vcf/sample_info.tsv", quote = TRUE, row.names = 
 
 
 
+### Relatedness
+
+--relatedness2 
+
+(base) Macs-MacBook-Pro-2:lates-wgs mac$ 
+
+
+vcftools --vcf outputs/108/pruned.vcf --relatedness2  --out outputs/108/relatedness2.txt
+
+VCFtools - 0.1.16
+(C) Adam Auton and Anthony Marcketta 2009
+
+Parameters as interpreted:
+	--vcf outputs/108/pruned.vcf
+	--out outputs/108/relatedness2.txt
+	--relatedness2
+
+Warning: Expected at least 2 parts in INFO entry: ID=PR,Number=0,Type=Flag,Description="Provisional reference allele, may not be based on real reference genome">
+After filtering, kept 58 out of 58 Individuals
+Outputting Individual Relatedness
+After filtering, kept 20626 out of a possible 20626 Sites
+Run Time = 1.00 seconds
+
+
+an estimated kinship coefficient range >0.354, [0.177, 0.354], [0.0884, 0.177] and [0.0442, 0.0884] corresponds to duplicate/MZ twin, 1st-degree, 2nd-degree, and 3rd-degree relationships respectively
+https://www.biostars.org/p/299569/
+
+```{r}
+info<-m58 %>% select(Run, Region)
+related<-read_tsv("outputs/108/relatedness2.txt.relatedness2") %>% filter(INDV1 !=INDV2) %>% mutate(King=abs(RELATEDNESS_PHI))
+related %>% left_join(info, by=c("INDV1"="Run")) %>%
+  left_join(info, by=c("INDV2"="Run")) %>% arrange(-King)
+```
+(doesn't work)
 ./run_lostruct.R -i /Users/mac/github/lates-wgs/outputs/108/vcf -t snp -s 20 -m 4 -I /Users/mac/github/lates-wgs/outputs/108/vcf/sample_info.tsv -j 1601
 
 ```{r}
@@ -395,4 +429,6 @@ ggplot(mds)+
 ggplot(mds)+
   geom_point(aes(x=MDS1, y=MDS3), alpha=0.75) +
   theme_bw()
+```
+
 
