--- a/604-genome-wide-pca.Rmd
+++ b/604-genome-wide-pca.Rmd
@@ -19,6 +19,7 @@ library(vcfR)
 library(snpR)
 library(ggpubr)
 library(RColorBrewer)
+library(viridis)
 ```
 
 
@@ -31,14 +32,23 @@ bcftools view -S outputs/401/sea.samples outputs/401/renamed.vcf.gz | bcftools +
 
 tabix outputs/604/sea-05.vcf.gz
 
-cat meta/lates-lgs.txt  | while read line; do bcftools view -Ob -r $line outputs/604/sea-05.vcf.gz > outputs/604/vcf/$line.bcf; done;
 
-for f in outputs/604/vcf/*.bcf; do bcftools index $f; done;
+cat meta/lates-lgs.txt  | while read line; do bcftools view -Ob -r $line outputs/604/sea-05.vcf.gz > outputs/604/bcf/$line.bcf; done;
+for f in outputs/604/bcf/*.bcf; do bcftools index $f; done;
+
+cat meta/lates-lgs.txt  | while read line; do bcftools view -Oz -r $line outputs/604/sea-05.vcf.gz > outputs/604/vcf/$line.vcf.gz; done;
+for f in outputs/604/vcf/*.vcf.gz; do bcftools index $f; done;
 
 
 #Pulling some regions:
 bcftools view -r NC_066852.1:3500000-23737464 outputs/604/sea-05.vcf.gz -O z > outputs/604/NC_066852.1-sub.vcf.gz     
 bcftools view -r NC_066852.1:6500000-8000000 outputs/604/sea-05.vcf.gz -O z > outputs/604/NC_066852.1-dummy-sub.vcf.gz     
+
+#pruned 
+bcftools +prune -m 0.30 -w 100000bp outputs/604/sea-05.vcf.gz -O z > outputs/604/sea-pruned.vcf.gz
+bcftools index outputs/604/sea-pruned.vcf.gz
+cat meta/lates-lgs.txt  | while read line; do bcftools view -Oz -r $line outputs/604/sea-pruned.vcf.gz > outputs/604/vcf-prune/$line.vcf.gz; done;
+for f in outputs/604/vcf-prune/*.vcf.gz; do bcftools index $f; done;
 
 ```
 
@@ -60,19 +70,21 @@ samples<-sea %>% select(Run) %>% rename(ID=Run)
 population<-sea %>% select(Locality) %>% rename(population=Locality)
 
 table<-cbind(samples, population)
-write.table(table, "outputs/604/vcf/sample_info.tsv", quote = TRUE, row.names = FALSE, sep="\t")
+write.table(table, "outputs/604/bcf/sample_info.tsv", quote = TRUE, row.names = FALSE, sep="\t")
 ```
 
 ## Basic PCA/Admixture
 
 Using a pruned version 
-```{r}
-snps<-import.snpR.data(genotypes = "outputs/401/sea-05.vcf", 
+```{r, eval=FALSE}
+snps<-import.snpR.data(genotypes = "outputs/604/sea-pruned.vcf.gz", 
       sample.meta = sea %>% select(Run, Region, Lineage))
+save(snps, file="outputs/604/snps.rda")
 ```
 
 
 ```{r}
+load("outputs/604/snps.rda")
 p <- plot_clusters(snps, facets = c("Region"))
 p$plot$pca
 ```
@@ -144,18 +156,22 @@ MDS4<-filter(tidymds, MDS=="MDS4") %>% rename(MDS4=MDS) %>% rename(Value4=Value)
 ```{r}
 ggplot(mds)+
   geom_point(aes(x=MDS1, y=MDS2, fill=chrom), pch=21, alpha=0.75) +
-  scale_fill_viridis_d(option="magma") +
+  scale_fill_viridis_d(option="H") +
   theme_bw() +
-  theme(legend.position = 'none')
+  theme(legend.position = 'none') +
+  theme(panel.grid=element_blank()) +
+  coord_equal()
 ```
 
 
 ```{r}
 ggplot(mds)+
   geom_point(aes(x=MDS1, y=MDS3, fill=chrom), pch=21, alpha=0.75) +
-  scale_fill_viridis_d(option="magma") +
+  scale_fill_viridis_d(option="H") +
   theme_bw() +
-  theme(legend.position = 'none')
+  theme(legend.position = 'none') +
+  theme(panel.grid=element_blank()) +
+  coord_equal()
 ```
 
      
@@ -164,9 +180,11 @@ ggplot(mds)+
 ```{r}
 ggplot(mds)+
   geom_point(aes(x=MDS1, y=MDS4, fill=chrom), pch=21, alpha=0.75) +
-  scale_fill_viridis_d(option="magma") +
+  scale_fill_viridis_d(option="H") +
   theme_bw() +
-  theme(legend.position = 'none')
+  theme(legend.position = 'none') +
+  theme(panel.grid=element_blank()) +
+  coord_equal()
 ```
      
 Plotting outliers by chrom.
@@ -195,11 +213,11 @@ chroms<-p1 %>% group_by(chrom) %>% mutate(Start=min(Index), Stop=max(Index)) %>%
 #Make enough colors
 nb.cols <- nrow(chroms)
 mycolors <- colorRampPalette(brewer.pal(8, "Set1"))(nb.cols)
-
+mycolors <- viridis(n = nb.cols, option="H")
 ggplot(p1) +
-  geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p1$Value1), ymax=max(p1$Value1)), fill=mycolors, alpha=0.25) +
+  geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p1$Value1), ymax=max(p1$Value1), fill=chrom), alpha=0.25) +
   geom_point(data=p1, aes(x=Index, y=Value1, color=chrom), alpha=0.75, cex=0.5) +
-  geom_point(data=outliers, aes(x=Index, y=Value1), color="black", cex=0.5) +
+  geom_point(data=outliers, aes(x=Index, y=Value1, fill=chrom), color="black", pch=21, cex=1, alpha=0.8) +
   theme_bw() +
   scale_x_continuous(breaks=chroms$Position, labels=chroms$chrom) +
   theme(axis.text.x = element_text(angle=45, hjust = 1, face="bold", size=6)) +
@@ -207,6 +225,7 @@ ggplot(p1) +
   theme(panel.grid = element_blank()) +
   theme(legend.position = "none") +
   scale_color_manual(values=mycolors) +
+  scale_fill_manual(values=mycolors) +
   ylab("MDS1") +
   xlab("Chromosome")
 ```
@@ -232,11 +251,12 @@ chroms<-p2 %>% group_by(chrom) %>% mutate(Start=min(Index), Stop=max(Index)) %>%
 #Make enough colors
 nb.cols <- nrow(chroms)
 mycolors <- colorRampPalette(brewer.pal(8, "Set1"))(nb.cols)
+mycolors <- viridis(n = nb.cols, option="H")
 
 ggplot(p2) +
-  geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p2$Value2), ymax=max(p2$Value2)), fill=mycolors, alpha=0.25) +
+  geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p2$Value2), ymax=max(p2$Value2), fill=chrom), alpha=0.25) +
   geom_point(data=p2, aes(x=Index, y=Value2, color=chrom), alpha=0.75, cex=0.5) +
-  geom_point(data=outliers2, aes(x=Index, y=Value2), color="black", cex=0.5) +
+  geom_point(data=outliers2, aes(x=Index, y=Value2, fill=chrom), color="black", pch=21, cex=1, alpha=0.8) +
   theme_bw() +
   scale_x_continuous(breaks=chroms$Position, labels=chroms$chrom) +
   theme(axis.text.x = element_text(angle=45, hjust = 1, face="bold", size=6)) +
@@ -244,6 +264,7 @@ ggplot(p2) +
   theme(panel.grid = element_blank()) +
   theme(legend.position = "none") +
   scale_color_manual(values=mycolors) +
+  scale_fill_manual(values=mycolors) +
   ylab("MDS2") +
   xlab("Chromosome")
 ```
@@ -271,13 +292,12 @@ chroms<-p3 %>% group_by(chrom) %>% mutate(Start=min(Index), Stop=max(Index)) %>%
 #Make enough colors
 nb.cols <- nrow(chroms)
 mycolors <- colorRampPalette(brewer.pal(8, "Set1"))(nb.cols)
+mycolors <- viridis(n = nb.cols, option="H")
 
-
-#Hmm.. I should be able to include a bunch of rectangles to offset chroms
 ggplot(p3) +
-  geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p3$Value3), ymax=max(p3$Value3)), fill=mycolors, alpha=0.25) +
+  geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p3$Value3), ymax=max(p3$Value3), fill=chrom), alpha=0.25) +
   geom_point(data=p3, aes(x=Index, y=Value3, color=chrom), alpha=0.75, cex=0.5) +
-  geom_point(data=outliers3, aes(x=Index, y=Value3), color="black", cex=0.5) +
+  geom_point(data=outliers3, aes(x=Index, y=Value3, fill=chrom), color="black", pch=21, cex=0.5) +
   theme_bw() +
   scale_x_continuous(breaks=chroms$Position, labels=chroms$chrom) +
   theme(axis.text.x = element_text(angle=45, hjust = 1, face="bold", size=6)) +
@@ -285,6 +305,7 @@ ggplot(p3) +
   theme(panel.grid = element_blank()) +
   theme(legend.position = "none") +
   scale_color_manual(values=mycolors) +
+  scale_fill_manual(values=mycolors) +
   ylab("MDS3") +
   xlab("Chromosome")
 ```
