--- a/1202-other-gene-pools.Rmd
+++ b/1202-other-gene-pools.Rmd
@@ -48,6 +48,8 @@ Downsample
 gl2<-gl[gl$pop %in% c("Cambodia","Indonesia-SJ","Vietnam", "Thailand","Philippines",
                       "India-Eastern-Coast","India-Western-Coast","Bangladesh"),]
 
+gl2<-gl[gl$pop %in% c("Cambodia","Thailand","Indonesia-SJ",
+                      "India-Eastern-Coast","India-Western-Coast","Bangladesh"),]
 ```
 
 gl2<-gl[gl$pop %in% c("India Eastern Coast","India Western Coast","Cambodia"),]
@@ -79,7 +81,7 @@ structure$plot
 
 ```{r}
 hyb <- gl.nhybrids(gl3,
-p0=c("Indian-Western-Coast","Bangladesh"),
+p0=c("Indian-Western-Coast","Bangladesh","India-Eastern-Coast"),
 method="AvgPIC",
 nhyb.directory="~/github/newhybrids", # Specify as necessary
 outpath="~/github/lates-wgs/outputs/1202",  # Specify as necessary, usually getwd() [= workspace]
